<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.adaskin.android.watcher8.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/build_string"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="200"
        android:title="@string/action_export"
        android:onClick="ExportCommand"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:orderInCategory="300"
        android:title="@string/action_import"
        android:onClick="ImportCommand"
        app:showAsAction="never" />
</menu>
