<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/view_background_color"
    tools:ignore="Overdraw">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_label"
        android:textColor="@color/normal_text_color"
        android:layout_marginTop="20sp"
        android:textSize="25sp"
        />

    <EditText android:id="@+id/owned_add_symbol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:background="@color/normal_text_color"
        android:textSize="25sp"
        tools:ignore="LabelFor" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_gain_target_label"
        android:textColor="@color/normal_text_color"
        android:layout_marginTop="30sp"
        android:textSize="25sp"
        />

    <EditText android:id="@+id/owned_add_gain_target"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:background="@color/normal_text_color"
        android:textSize="25sp"
        tools:ignore="LabelFor" />

    <Button android:id="@+id/owned_add_add_block_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_block_button_label"
        android:background="@color/button_background_color"
        android:textColor="@color/button_text_color"
        android:textAllCaps="false"
        android:onClick="addBlockButtonClicked"
        android:layout_marginTop="25sp"
        />

</LinearLayout>