<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_footer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbarBackground"
    android:gravity="bottom"
    tools:context=".fragments.FooterFragment" >

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="48dip"
        android:layout_height="48dip"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dip"
        android:layout_marginTop="2dip"
        android:layout_marginBottom="3dip"
        android:src="@drawable/plus_icon"
        android:contentDescription="@string/add_button"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/last_update_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/defaultDateText"
            android:textColor="@color/dateTextColor"
            />

        <TextView
            android:id="@+id/last_update_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/defaultTimeText"
            android:textColor="@color/timeTextColor"
            />

    </LinearLayout>

    <Button
        android:id="@+id/refresh_all_btn"
        android:layout_width="48dip"
        android:layout_height="48dip"
        android:background="@color/toolbarBackground"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dip"
        android:layout_marginTop="2dip"
        android:layout_marginBottom="3dip"
        android:drawableLeft="@drawable/progress"
        tools:ignore="RtlHardcoded"
        />

</RelativeLayout>