<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/view_background_color"
    >

    <LinearLayout android:id="@+id/quote_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        >

        <!-- Full Name -->
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/owned_full_name_field"
            android:textColor="@color/normal_text_color"
            android:textSize="20sp"
            />

        <GridLayout android:rowCount="4" android:columnCount="2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <!-- PPS -->
            <LinearLayout android:layout_row="0" android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@color/normal_text_color"
                    android:text="@string/pps_label"
                    />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/owned_pps_field"
                    android:textColor="@color/normal_text_color"
                    android:paddingStart="@dimen/details_padding_left"
                    android:paddingEnd="@dimen/details_padding_right"
                    />
            </LinearLayout>

            <!-- DivPerShare -->
            <LinearLayout android:layout_row="1" android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@color/normal_text_color"
                    android:text="@string/div_label"
                    />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@color/normal_text_color"
                    android:id="@+id/owned_divps_field"
                    android:paddingStart="@dimen/details_padding_left"
                    android:paddingEnd="@dimen/details_padding_right"

                    />
            </LinearLayout>

            <!-- YearlyRange -->
            <LinearLayout android:layout_row="2" android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@color/normal_text_color"
                    android:text="@string/range_label"
                    />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/owned_yr_min_field"
                    android:textColor="@color/normal_text_color"
                    android:paddingStart="@dimen/details_padding_left"
                    android:paddingEnd="@dimen/details_padding_right"
                    />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@color/normal_text_color"
                    android:text="@string/range_separator"
                    />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@color/normal_text_color"
                    android:id="@+id/owned_yr_max_field"
                    />
            </LinearLayout>

            <!-- Analyst Opinion -->
            <LinearLayout  android:layout_row="3" android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@color/normal_text_color"
                    android:text="@string/anal_label"
                    />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/owned_anal_op_field"
                    android:textColor="@color/normal_text_color"
                    android:paddingStart="@dimen/details_padding_left"
                    android:paddingEnd="@dimen/details_padding_right"
                    />
            </LinearLayout>

            <!-- Refresh Button -->
            <RelativeLayout android:layout_row="0" android:layout_column="1" android:layout_rowSpan="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >
                <ImageButton android:id="@+id/detail_refresh_button_stationary"
                    android:layout_width="48dip"
                    android:layout_height="48dip"
                    android:background="@android:color/transparent"
                    android:layout_centerInParent="true"
                    android:src="@drawable/gradient_shape"
                    android:contentDescription="@string/refresh_button_stationary"
                    />

                <!--suppress AndroidMissingOnClickHandler -->
                <ImageButton android:id="@+id/detail_refresh_button_moving"
                    android:layout_width="48dip"
                    android:layout_height="48dip"
                    android:background="@android:color/transparent"
                    android:layout_centerInParent="true"
                    android:src="@drawable/refresh_arrows"
                    android:contentDescription="@string/refresh_button_moving"
                    android:onClick="detailRefreshButtonClicked"
                    />
            </RelativeLayout>

        </GridLayout>

        <!--  Strike Price & Gain Target -->
        <LinearLayout android:layout_width="fill_parent"  android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <Button android:layout_width="wrap_content"  android:layout_height="wrap_content"
                android:text="@string/strike_price_label"
                android:background="@color/button_background_color"
                android:textColor="@color/button_text_color"
                android:textSize="11sp"
                android:textAllCaps="false"
                android:layout_marginStart="5dp"
                android:paddingStart="@dimen/details_padding_left"
                android:paddingEnd="@dimen/details_padding_right"
                android:onClick="changeButtonClicked_StrikePrice"
                tools:ignore="SmallSp" />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/owned_strike_price_field"
                android:textColor="@color/normal_text_color"
                android:paddingStart="@dimen/details_padding_left"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlSymmetry" />

            <Button android:layout_width="wrap_content"  android:layout_height="wrap_content"
                android:text="@string/gain_target_label"
                android:background="@color/button_background_color"
                android:textColor="@color/button_text_color"
                android:textSize="11sp"
                android:textAllCaps="false"
                android:layout_marginStart="60dp"
                android:paddingStart="@dimen/details_padding_left"
                android:paddingEnd="@dimen/details_padding_right"
                android:onClick="changeButtonClicked_GainTarget"
                tools:ignore="SmallSp" />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/owned_gain_target_field"
                android:textColor="@color/normal_text_color"
                android:paddingStart="@dimen/details_padding_left"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <!-- Total Investment -->
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            >
            <TextView android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="44"
                android:textColor="@color/normal_text_color"
                android:text="@string/total_investment_label"
                android:layout_gravity="center_vertical"
                />
            <TextView android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="21"
                android:textColor="@color/normal_text_color"
                android:id="@+id/owned_total_investment_amount"
                android:paddingStart="@dimen/details_padding_left"
                android:paddingEnd="@dimen/details_padding_right"
                android:layout_gravity="center_vertical"
                />
            <TextView android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="19"
                android:textColor="@color/normal_text_color"
                android:id="@+id/owned_total_investment_gain"
                android:paddingStart="@dimen/details_padding_left"
                android:paddingEnd="@dimen/details_padding_right"
                android:layout_gravity="center_vertical"
                />
            <TextView android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="16"
                android:textColor="@color/normal_text_color"
                android:id="@+id/owned_total_investment_divy"
                android:paddingStart="@dimen/details_padding_left"
                android:paddingEnd="@dimen/details_padding_right"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </LinearLayout>

    <!--  "Add Another Block" button  -->
    <Button android:id="@+id/add_another_block_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_block_label"
        android:onClick="addAnotherBlockButtonClicked"
        android:background="@color/button_background_color"
        android:textColor="@color/button_text_color"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:paddingStart="@dimen/details_padding_left"
        android:paddingEnd="@dimen/details_padding_right"
        />

    <!-- List of BuyBlocks -->
    <LinearLayout android:id="@+id/buy_blocks_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:layout_below="@+id/quote_information"
        android:layout_above="@+id/add_another_block_button"
        >
        <!--  List -->
        <ListView android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            />
    </LinearLayout>

</RelativeLayout>