<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/view_background_color"
    tools:ignore="Overdraw">

    <!-- Buy Date -->
    <LinearLayout android:id="@+id/buy_block_row_buy_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/buy_date_label"
            android:textColor="@color/normal_text_color"
            android:textSize="25sp"
            />
        <Button android:id="@+id/buy_block_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:background="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <!-- Buy Price -->
    <LinearLayout android:id="@+id/buy_block_row_buy_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/buy_price_label"
            android:textColor="@color/normal_text_color"
            android:textSize="25sp"
            />
        <EditText android:id="@+id/buy_block_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginStart="10sp"
            android:background="@color/normal_text_color"
            android:textSize="25sp"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <!-- Number of Shares -->
    <LinearLayout android:id="@+id/buy_block_row_num_shares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/num_shares_label"
            android:textColor="@color/normal_text_color"
            android:textSize="25sp"
            />
        <EditText android:id="@+id/buy_block_num_shares"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginStart="10sp"
            android:background="@color/normal_text_color"
            android:textSize="25sp"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <!-- Account -->
    <LinearLayout android:id="@+id/buy_block_row_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        >
        <TextView android:id="@+id/buy_block_account_color_field"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center_vertical"
            />

        <TextView android:id="@+id/buy_block_account_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:textColor="@color/normal_text_color"
            android:textSize="20sp"
            />

        <Button android:id="@+id/buy_block_account_change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/change_account_button_label"
            android:background="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:textAllCaps="false"
            android:layout_marginStart="10sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            />

    </LinearLayout>

    <!-- Done button -->
    <Button android:id="@+id/buy_block_done_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_button_label"
        android:background="@color/button_background_color"
        android:textColor="@color/button_text_color"
        android:textAllCaps="false"
        android:onClick="doneButtonClicked"
        android:layout_marginTop="50sp"
        />

</LinearLayout>