<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <!--android:background="?attr/colorPrimary"-->

        <android.support.v7.widget.Toolbar
            android:id="@+id/hamburger"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:background="@android:color/white"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@android:color/darker_gray"
            app:tabSelectedTextColor="@android:color/black"
            app:tabIndicatorHeight="10dp"
            >

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem_owned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_owned"/>

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem_watch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_watch" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <!--<include layout="@layout/fragment_footer" />-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <fragment
            android:id="@+id/fragment_footer"
            android:name="com.adaskin.android.watcher8.fragments.FooterFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            tools:layout="@layout/fragment_footer"
            />

        <com.adaskin.android.watcher8.adapters.NonSwipableViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/fragment_footer"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".MainActivity" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>